# model-forge

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.claude/commands/: batch.md  generate.md
model_forge/: __init__.py  cli.py  server.py
model_forge/api/: __init__.py  routes.py  routes_v2.py
model_forge/core/: __init__.py  association_generator.py  batch_generator.py  image_generator.py  model_generator.py  pipeline.py  prompt_generator.py
model_forge/providers/: __init__.py  baichuan.py  base.py  deepseek.py  doubao.py  gemini.py  kimi.py  manager.py  minimax.py  openrouter.py  qwen.py  spark.py  yi.py  zhipu.py
scripts/: rename_folders.py
templates/: index.html
